--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "dev": "vite",
     "dev:server": "node server/index.js",
     "dev:all": "concurrently \"npm run dev:server\" \"npm run dev\"",
-    "build": "vite build",
+    "build": "npm install && vite build",
     "start": "NODE_ENV=production node server/index.js",
     "preview": "vite preview",
     "render-build": "npm install && npm run build"
@@ -23,13 +23,13 @@
     "jsonwebtoken": "^9.0.2",
     "cors": "^2.8.5",
     "socket.io": "^4.6.1",
-    "axios": "^1.6.2"
+    "axios": "^1.6.2",
+    "vite": "^5.0.8",
+    "@vitejs/plugin-react": "^4.2.1"
   },
   "devDependencies": {
     "@types/react": "^18.2.43",
     "@types/react-dom": "^18.2.17",
-    "@vitejs/plugin-react": "^4.2.1",
-    "vite": "^5.0.8",
     "concurrently": "^8.2.2"
   }
 }
