--- a/package.json
+++ b/package.json
@@ -13,19 +13,20 @@
     "render-build": "npm install && npm run build"
   },
   "dependencies": {
+    "@vitejs/plugin-react": "^4.2.1",
+    "axios": "^1.6.2",
+    "bcryptjs": "^2.4.3",
+    "cors": "^2.8.5",
+    "date-fns": "^2.30.0",
+    "express": "^4.18.2",
+    "jsonwebtoken": "^9.0.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.20.0",
-    "date-fns": "^2.30.0",
-    "express": "^4.18.2",
-    "sqlite3": "^5.1.6",
-    "bcryptjs": "^2.4.3",
-    "jsonwebtoken": "^9.0.2",
-    "cors": "^2.8.5",
     "socket.io": "^4.6.1",
-    "axios": "^1.6.2",
-    "vite": "^5.0.8",
-    "@vitejs/plugin-react": "^4.2.1"
+    "socket.io-client": "^4.8.1",
+    "sqlite3": "^5.1.6",
+    "vite": "^5.0.8"
   },
   "devDependencies": {
     "@types/react": "^18.2.43",
@@ -33,4 +34,3 @@
     "concurrently": "^8.2.2"
   }
 }
-
